# openenv-jira-to-code

./: .gitignore  72b_eval.txt  Dockerfile  README.md  generate_tasks.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  env.py
src/jira_to_code/: models.py
src/jira_to_code/server/: app.py  env.py
src/jira_to_code/tasks/easy/: calculator.py
src/jira_to_code/tasks/easy_2/: string_utils.py
src/jira_to_code/tasks/easy_3/: endpoints.py  test_endpoints.py
src/jira_to_code/tasks/easy_4/: pagination.py  test_pagination.py
src/jira_to_code/tasks/easy_5/: routes.py  test_routes.py
src/jira_to_code/tasks/hard/: lru_cache.py
src/jira_to_code/tasks/hard_2/: graph.py
src/jira_to_code/tasks/hard_3/: models.py  test_models.py
src/jira_to_code/tasks/hard_4/: test_worker.py  worker.py
src/jira_to_code/tasks/hard_5/: pipeline.py  test_pipeline.py
src/jira_to_code/tasks/hard_6/: gateway.py  test_gateway.py
src/jira_to_code/tasks/hard_7/: requirements.txt  server.py  test_server.py
src/jira_to_code/tasks/medium/: formatter.py
src/jira_to_code/tasks/medium_10/: config.py  test_config.py
src/jira_to_code/tasks/medium_2/: validator.py
src/jira_to_code/tasks/medium_3/: auth.py  requirements.txt  routes.py  test_routes.py
src/jira_to_code/tasks/medium_4/: orm.py  test_orm.py
src/jira_to_code/tasks/medium_5/: test_validate.py  validate.py
src/jira_to_code/tasks/medium_6/: service.py  test_service.py
src/jira_to_code/tasks/medium_7/: profile.py  test_profile.py
src/jira_to_code/tasks/medium_8/: scheduling.py  (+1 more)
(+8 files in other folders)
